src/scss/components/paragraphs/_unit-search.scss
.component--unit-search {
  background-color: $color-silver-light;
}

// If the unit-search is just before footer.
.layout-main-wrapper > *:last-child .component--unit-search:last-child {
  margin-bottom: -115px; // Enough to get the block under the footer.
  padding-bottom: 55px; // Leave enough room between the last card and footer.
}

.component--unit-search .component__container {
  padding-bottom: $spacing-double;
  padding-top: $spacing-double;

  @include breakpoint($breakpoint-m) {
    padding-bottom: $spacing-quadruple;
    padding-top: $spacing-quadruple;
  }
}


.views--unit-search {
  margin-top: $spacing-double;

  & > .views-infinite-scroll-content-wrapper > .views-row + .views-row {
    margin-top: $spacing;
  }

  .hds-button--primary {
    --background-color: var(--color-black);
    --background-color-hover: var(--color-black);
    --background-color-focus: var(--color-black);
    --background-color-hover-focus: var(--color-black);
    --background-color-disabled: var(--color-black-20);
    --border-color: var(--color-black);
    --border-color-hover: var(--color-black);
    --border-color-focus: var(--color-black);
    --border-color-hover-focus: var(--color-black);
    --border-color-disabled: var(--color-black-20);
    --color: var(--color-white);
    --color-hover: var(--color-white);
    --color-focus: var(--color-white);
    --color-hover-focus: var(--color-white);
    --color-disabled: var(--color-black);
    --focus-outline-color: var(--color-black);
    --submit-input-focus-gutter-color: var(--color-white);
  }

  .form-actions .hds-button--primary {
    width: 100%;

    @include breakpoint($breakpoint-m) {
      margin-left: $spacing-and-half;
    }
  }


  .views-exposed-form {
    @include breakpoint($breakpoint-m) {
      align-items: flex-end;
      display: flex;
      flex-wrap: wrap;
    }

    .form-item {
      @include breakpoint($breakpoint-m) {
        margin-bottom: 0;
        width: 70%;
      }
    }

    .hds-text-input__input-wrapper {
      &::after {
        background-color: $color-black;
        background-size: contain;
        content: "";
        display: block;
        height: 20px;
        mask-image: url('../icons/hds/ui/search.svg');
        position: absolute;
        right: $spacing;
        top: 50%;
        transform: translateY(-50%);
        width: 20px;
      }

      .hds-text-input__input {
        padding-right: $spacing-triple;
      }
    }

    // Move language checkbox to a new row and set proper margin
    [data-drupal-selector="edit-provided-languages-value"] {
      margin-top: $spacing-and-half;
      order: 1;
    }

    .form-actions {
      @include breakpoint($breakpoint-m) {
        display: flex;
        width: 30%;
      }
    }
  }

  .unit-search__count-container {
    @include font-size(23px, 30px);
    border-top: 1px solid $color-black-10;
    display: block;
    margin-top: $spacing-double;
    padding-top: $spacing-double;
    width: 100%;

    @include breakpoint($breakpoint-m) {
      margin-top: $spacing-quadruple;
      padding-top: $spacing-quadruple;
    }

    .unit-search__count {
      font-weight: 700;
    }
  }

  .views-infinite-scroll-content-wrapper {
    margin-top: $spacing;

    @include breakpoint($breakpoint-m) {
      margin-top: $spacing-double;
    }
  }

  .unit__search__pager {
    display: flex;
    justify-content: center;
    list-style: none;
    margin: $spacing-double 0 0;
    padding: 0;

    @include breakpoint($breakpoint-m) {
      margin-top: $spacing-quadruple;
    }
  }
}

